--- a/Aplicacion1/Aplicacion1.csproj
+++ b/Aplicacion1/Aplicacion1.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\css\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="bootstrap" Version="5.1.3" />
+  </ItemGroup>
+
 </Project>
